gem translations, rails app translated

--- a/app/views/helpers/_build_breadcrumb.html.erb
+++ b/app/views/helpers/_build_breadcrumb.html.erb
@@ -1,6 +1,6 @@
 <ul class="breadcrumb main_breadcrumb">
   <li>
-    <%= ajax_link_to "Úvodní stránka", "/" %>
+    <%= ajax_link_to t('itl-gem.main_page'), "/" %>
     <% if !breadcrumb.blank? %>
         <span class="divider">/</span>
     <% end %>
