date picker helper editable table, fixed when empty row editable table fixed when editing first row - leading fiorst row added

--- a/app/views/helpers/editable_table/_build_table_wrapper.html.erb
+++ b/app/views/helpers/editable_table/_build_table_wrapper.html.erb
@@ -66,17 +66,11 @@
 </script>
 
 
-<script type="text/javascript">
-    $.datepicker.setDefaults($.datepicker.regional[ "cs" ]);
-    $('.datetime_class').datetimepicker({
-        dateFormat:"yy-mm-dd",
-        timeFormat:'hh:mm',
-        separator:' ',
-        changeYear:true,
-        yearRange:'<%= Date.today.year - 100 %>:<%= Date.today.year + 30 %>',
-        changeMonth:true
-    });
-</script>
+
+
+<%= build_datetime_picker_js_code('.datetime_class') %>
+<%= build_date_picker_js_code('.date_class') %>
+
 
 
 <script type="text/javascript">
