remove download tag

--- a/app/views/helpers/_build_datafiles.html.erb
+++ b/app/views/helpers/_build_datafiles.html.erb
@@ -174,7 +174,7 @@
     </td>
     {% } else { %}
     <td class="preview">{% if (file.thumbnail_url) { %}
-      <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" download="{%=file.name%}"><img src="{%=file.thumbnail_url%}"></a>
+      <a href="{%=file.url%}" title="{%=file.name%}" rel="gallery" ><img src="{%=file.thumbnail_url%}"></a>
       {% } %}
     </td>
     <td class="name">
