--- a/app/views/helpers/_build_datafiles.html.erb
+++ b/app/views/helpers/_build_datafiles.html.erb
@@ -182,7 +182,7 @@
       {% if (sliced_name.length > 20) { %}
          {% sliced_name = sliced_name.slice(0,17) + '...'; %}
       {% } %}
-      <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=sliced_name%}</a>
+      <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" >{%=sliced_name%}</a>
     </td>
     {% var sliced_user_name=file.user_name; %}
     {% if (sliced_user_name.length > 20) { %}
