--- a/app/assets/stylesheets/backbone_css/z_date_select.css.scss
+++ b/app/assets/stylesheets/backbone_css/z_date_select.css.scss
@@ -27,11 +27,11 @@
     height: 30px !important;
   }
   .ui-datepicker-prev {
-    background: asset-url('/assets/backbone_images/date_select_and_multiselect/arrow-left.png', image) no-repeat left top;
+    background: asset-url('/assets/backbone_images/date_select_and_multiselect/arrow-left.png') no-repeat left top;
     left: 2px;
   }
   .ui-datepicker-next {
-    background: asset-url('/assets/backbone_images/date_select_and_multiselect/arrow-right.png', image) no-repeat left top;
+    background: asset-url('/assets/backbone_images/date_select_and_multiselect/arrow-right.png') no-repeat left top;
     right: 2px;
   }
   .ui-datepicker-prev-hover,
@@ -172,7 +172,7 @@
   margin-top: 5px !important;
 }
 .ui_tpicker_time {
-  background: asset-url('/assets/backbone_images/date_select_and_multiselect/time.png', image) no-repeat left top !important;
+  background: asset-url('/assets/backbone_images/date_select_and_multiselect/time.png') no-repeat left top !important;
   width: 56px;
   height: 24px;
   color: #898989 !important;
@@ -185,14 +185,14 @@
   height: 4px !important;
 }
 .ui-datepicker-current {
-  background: asset-url('/assets/backbone_images/date_select_and_multiselect/btn.png', image) no-repeat left top !important;
+  background: asset-url('/assets/backbone_images/date_select_and_multiselect/btn.png') no-repeat left top !important;
   width: 62px !important;
   height: 30px !important;
   color: #000000 !important;
   font-size: 14px !important;
 }
 .ui-datepicker-close {
-  background: asset-url('/assets/backbone_images/date_select_and_multiselect/btn-green.png', image) no-repeat left top !important;
+  background: asset-url('/assets/backbone_images/date_select_and_multiselect/btn-green.png') no-repeat left top !important;
   width: 69px !important;
   height: 30px !important;
   color: #ffffff !important;
@@ -200,7 +200,7 @@
   text-shadow: -1px 0 #739924;
 }
 .ui-slider-handle {
-  background: asset-url('/assets/backbone_images/date_select_and_multiselect/slide.png', image) no-repeat left top !important;
+  background: asset-url('/assets/backbone_images/date_select_and_multiselect/slide.png') no-repeat left top !important;
   width: 18px !important;
   height: 18px !important;
   top: -6px !important;
